--- a/notebooks/actuarial_symbols.ipynb
+++ b/notebooks/actuarial_symbols.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%load_ext manim.utils.ipython_magic\\n"
+        "%load_ext manim.utils.ipython_magic"
       ]
     },
     {
@@ -15,29 +15,27 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%%manim -qh -v WARNING ActSymbolDemo\\n",
-        "from manim import *\\n",
-        "\\n",
-        "class ActSymbolDemo(Scene):\\n",
-        "    def construct(self):\\n",
-        "        template = TexTemplate()\\n",
-        "        # Load actuarial symbols package into LaTeX preamble\\n",
-        "        template.add_to_preamble(r\"\\\\usepackage{actuarialsymbol}\")\\n",
-        "        # Define several actuarial formulas\\n",
+        "%%manim -qh -v WARNING ActSymbolDemo",
+        "from manim import *",
+        "class ActSymbolDemo(Scene):",
+        "    def construct(self):",
+        "        template = TexTemplate()",
+        "        # Load actuarial symbols package into LaTeX preamble",
+        "        template.add_to_preamble(r\"\\\\usepackage{actuarialsymbol}\")",
+        "        # Define several actuarial formulas",
         "        formulas = [\\n",
-        "            Tex(r\"$\\\\ax*{x:n}$\",  tex_template=template, font_size=96),\\n",
-        "            Tex(r\"$\\\\ax**{x:n}$\", tex_template=template, font_size=96),\\n",
-        "            Tex(r\"$\\\\sx*{x:n}$\",  tex_template=template, font_size=96),\\n",
-        "            Tex(r\"$\\\\sx**{x:n}$\", tex_template=template, font_size=96),\\n",
-        "        ]\\n",
-        "        # Arrange formulas vertically and animate their appearance\\n",
-        "        group = VGroup(*formulas).arrange(DOWN, aligned_edge=LEFT)\\n",
-        "        self.play(AnimationGroup(*[Write(f) for f in formulas], lag_ratio=0.3))\\n",
-        "        self.wait()\\n",
-        "        # Shift the group slightly to the left\\n",
-        "        self.play(group.animate.to_edge(LEFT))\\n",
-        "        self.wait()\\n"
-      ]
+        "            Tex(r\"$\\\\ax*{x:n}$\",  tex_template=template, font_size=96),
+        "            Tex(r\"$\\\\ax**{x:n}$\", tex_template=template, font_size=96),
+        "            Tex(r\"$\\\\sx*{x:n}$\",  tex_template=template, font_size=96),
+        "            Tex(r\"$\\\\sx**{x:n}$\", tex_template=template, font_size=96),
+        "        ]
+        "        # Arrange formulas vertically and animate their appearance
+        "        group = VGroup(*formulas).arrange(DOWN, aligned_edge=LEFT)
+        "        self.play(AnimationGroup(*[Write(f) for f in formulas], lag_ratio=0.3))
+        "        self.wait()
+        "        # Shift the group slightly to the left
+        "        self.play(group.animate.to_edge(LEFT))
+        "        self.wait()      ]
     }
   ],
   "metadata": {
