--- a/notebooks/actuarial_examples.ipynb
+++ b/notebooks/actuarial_examples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c92608b",
+   "id": "974f9602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d242d298",
+   "id": "27c90b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1482275",
+   "id": "26f15444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fb16ef",
+   "id": "749cc2d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c530570",
+   "id": "73dd0b09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33970274",
+   "id": "98908937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a90f67eb",
+   "id": "dfd334f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470895f2",
+   "id": "99c6ae80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7d1939",
+   "id": "7082d3b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1cbdd70",
+   "id": "7de78343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df1afde7",
+   "id": "0be3fa2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +275,10 @@
     "    def construct(self):\n",
     "        expr1 = MathTex('a','b','c')\n",
     "        expr2 = MathTex('x','y','z')\n",
-    "        glyph_map = [(0,0),(1,1),(2,2)]\n",
+    "        entries = [([0],[0],{}), ([1],[1],{}), ([2],[2],{})]\n",
     "        self.play(Write(expr1))\n",
-    "        self.play(TransformByGlyphMap(expr1, expr2, glyph_map))\n",
+    "        # Unpack entries with * to pass as separate arguments\n",
+    "        self.play(TransformByGlyphMap(expr1, expr2, *entries))\n",
     "        self.wait()\n"
    ]
   }
